--- a/src/components/SearchBar/Searchbar.module.css
+++ b/src/components/SearchBar/Searchbar.module.css
@@ -32,7 +32,7 @@
     width: 48px;
     height: 48px;
     border: 0;
-    background-image: url('https://image.flaticon.com/icons/svg/149/149852.svg');
+background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/OOjs_UI_icon_search-ltr.svg/1200px-OOjs_UI_icon_search-ltr.svg.png');
     background-size: 40%;
     background-repeat: no-repeat;
     background-position: center;
